shell: Raise the existing window when already opened

https://bugzilla.gnome.org/show_bug.cgi?id=692259