shell/cc-window.c
@@ -1511,5 +1511,5 @@ cc_window_present (CcWindow *center)
 void
 cc_window_show (CcWindow *center)
 {
-  gtk_widget_show (GTK_WIDGET (center));
+  gtk_widget_present (GTK_WIDGET (center));
 }
